--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "autoprefixer": "10.0.1",
     "node-sass": "4.14.1",
+    "postcss": "8.1.1",
     "postcss-cli": "8.0.0",
     "prettier": "2.1.2",
     "stylelint": "13.7.2",
